--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "keywords": [],
   "main": "src/index.tsx",
-  "homepage": "https://YOUR_GITHUB_USERNAME.github.io/tyson2",
+  "homepage": "https://Dgcode88.github.io/tyson2",
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
