--- a/package.json
+++ b/package.json
@@ -6,17 +6,16 @@
   "main": "src/index.tsx",
   "homepage": "https://Dgcode88.github.io/tyson2",
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.0",
-    "react-icons": "5.5.0",
-    "styled-components": "6.1.15"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "react-icons": "^4.11.0",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
-    "loader-utils": "3.2.1",
-    "typescript": "5.7.2",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "typescript": "^4.9.5",
     "gh-pages": "^6.1.1"
   },
   "scripts": {
