--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "90-Day Tyson Transformation",
   "keywords": [],
   "main": "src/index.tsx",
-  "homepage": "https://Dgcode88.github.io/tyson2",
+  "homepage": ".",
   "engines": {
     "node": ">=16.x"
   },
@@ -19,14 +19,16 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "typescript": "^4.9.5",
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.1.1",
+    "cross-env": "^7.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:github": "cross-env PUBLIC_URL=https://Dgcode88.github.io/tyson2 react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "npm run build:github",
     "deploy": "gh-pages -d build"
   },
   "browserslist": [
