--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm install && npm run build",
+  "buildCommand": "npm install && npm install cross-env --no-save && npm run build",
   "outputDirectory": "build",
   "framework": "create-react-app",
   "routes": [
