--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "react-icons": "^4.11.0",
+    "react-scripts": "5.0.1",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^4.9.5",
+    "cross-env": "^7.0.3",
     "gh-pages": "^6.1.1",
-    "cross-env": "^7.0.3"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
